signOut + PersistentContext
